# fastApi-Studies

./: .gitignore  README.md  fast_start.db  pyproject.toml
src/fast_start/: database.py  main.py  schema.py
src/fast_start/auth/: Security.py
src/fast_start/config/: database.py  repository.py
src/fast_start/controller/: FileController.py  TokenController.py  UserController.py
src/fast_start/controller/DTO/: UserDTO.py  UserFileDTO.py
src/fast_start/model/: UserFileModel.py  UserModel.py
src/fast_start/repository/: BaseRepository.py  UserMetaDataFileRepository.py  UserRepository.py
src/fast_start/service/: FileService.py  UserService.py
src/fast_start/validations/: UserValidation.py
uploads/: Apresentação Profissional – Sandro.txt  cover letter.txt
