[project]
name = "fast-start"
version = "0.1.0"
description = ""
authors = [
    {name = "sandrorsjunior",email = "sandrorsjunior@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)"
]

[tool.poetry]
packages = [{include = "fast_start", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "poetry run uvicorn src.fast_start.main:app --reload"